Fix layout vh layout bug on mobile viewports

--- a/web/svelte/src/app.css
+++ b/web/svelte/src/app.css
@@ -28,8 +28,9 @@ html {
 
 body {
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+  position: fixed;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
 }
 
